--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -122,19 +122,19 @@
 
                         <div class="col">
                           <strong>Manuales de validación</strong></br>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_curp.pdf" target="_blank">¿Como validar un
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_curp.pdf" target="_blank">¿Cómo validar un
                             CURP?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_acta.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_acta.pdf" target="_blank">¿Cómo
                             validar un acta de nacimiento?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_certificado.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_certificado.pdf" target="_blank">¿Cómo
                             validar un certificado?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_titulo.pdf" target="_blank">¿Como
-                            validar un titulo?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Como
-                            validar un cédula?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_comprobante.pdf" target="_blank">¿Como
-                            validar un comprobante de docmicilio?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_ine.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_titulo.pdf" target="_blank">¿Cómo
+                            validar un título?</a>
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Cómo
+                            validar una cédula?</a>
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_comprobante.pdf" target="_blank">¿Cómo
+                            validar un comprobante de domicilio?</a>
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_ine.pdf" target="_blank">¿Cómo
                             validar una identificación oficial?</a>
                         </div>
                       </div>
@@ -233,17 +233,17 @@
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_certificado.pdf"
-                                  target="_blank">¿Como validar un antecedente academico?</a>
+                                  target="_blank">¿Cómo validar un antecedente academico?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_identificacion.pdf"
-                                  target="_blank">¿Como validar una identificación?</a>
+                                  target="_blank">¿Cómo validar una identificación?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_comprobante.pdf"
-                                  target="_blank">¿Como validar un Comprobante de domicilio?</a>
+                                  target="_blank">¿Cómo validar un Comprobante de domicilio?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_cartayanexo.pdf"
-                                  target="_blank">¿Como validar una carta compromiso y anexo?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso y anexo?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar_cartamotivos.pdf"
-                                  target="_blank">¿Como validar una carta motivos?</a>
+                                  target="_blank">¿Cómo validar una carta motivos?</a>
                                 <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Colombia/validar-curriculum.pdf"
-                                  target="_blank">¿Como validar una carta curriculum?</a> 
+                                  target="_blank">¿Cómo validar una carta curriculum?</a> 
                               </div>
                             </div>
                           </div>
@@ -291,16 +291,16 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Cómo
                                   validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
                               </div>
                             </div>
                           </div>
@@ -348,16 +348,16 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Cómo
                                   validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
                               </div>
                             </div>
                           </div>
@@ -413,23 +413,23 @@
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de licenciatura?</a>
+                                  target="_blank">¿Cómo validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de Maestría?</a>
+                                  target="_blank">¿Cómo validar un certificado de Maestría?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta motivos?</a>
+                                  target="_blank">¿Cómo validar una carta motivos?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un carta curriculum?</a>
+                                  target="_blank">¿Cómo validar un carta curriculum?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una constancia laboral?</a>
+                                  target="_blank">¿Cómo validar una constancia laboral?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
 
                               </div>
                             </div>
@@ -478,16 +478,16 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Cómo
                                   validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
                               </div>
                             </div>
                           </div>
@@ -544,23 +544,23 @@
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de licenciatura?</a>
+                                  target="_blank">¿Cómo validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de Maestría?</a>
+                                  target="_blank">¿Cómo validar un certificado de Maestría?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta motivos?</a>
+                                  target="_blank">¿Cómo validar una carta motivos?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un carta curriculum?</a>
+                                  target="_blank">¿Cómo validar un carta curriculum?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una constancia laboral?</a>
+                                  target="_blank">¿Cómo validar una constancia laboral?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
 
                               </div>
                             </div>
@@ -610,16 +610,16 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Cómo
                                   validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
                               </div>
                             </div>
                           </div>
@@ -667,16 +667,16 @@
 
                               <div class="col">
                                 <strong>Manuales de validación</strong></br>
-                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Cómo
                                   validar un certificado de licenciatura?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                  target="_blank">¿Cómo validar un certificado de bachillerato?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                  target="_blank">¿Cómo validar una carta compromiso?</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                  target="_blank">¿Cómo validar un comprobante de domicilio</a>
                                 <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
-                                  target="_blank">¿Como validar una identificación</a>
+                                  target="_blank">¿Cómo validar una identificación</a>
                               </div>
                             </div>
                           </div>
