--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -556,11 +556,11 @@
 
               <div class="col-md-6">
                 <!--Ejemplo-->
-                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo_intermedio.png"></button>
+                <button class="col btn botonejemdoc btntit mx-auto d-block" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int2" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/escolares/Titulo2_intermedio.png"></button>
 
-                <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
+                <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int2" aria-labelledby="offcanvasBottomLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título  intermedio auxiliar</h5>
+                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Título  intermedio analista</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="container card border border-0">
@@ -570,29 +570,29 @@
                     <div class="col">
   
   
-                      <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
+                      <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
-                            <img src="img/escolares/Titulo_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo_intermedio5.png" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio6.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="visually-hidden">Next</span>
                         </button>
