--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -570,7 +570,7 @@
                     <div class="col">
   
   
-                      <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
+             n         <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
                             <img src="img/escolares/Titulo2_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
