--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -360,22 +360,21 @@
           </div>
 
           <div>
-            <h2 class="text-center">¿Como es un proceso de titulación para LATAM?</h2>  
+            <h2 class="text-center">¿Cómo es un proceso de titulación para LATAM?</h2>  
             <img class="img-proceso" src="img/procesotl.png">
               <div class="card border-0 card-proceso col-lg-9 ">
                 <h5 class="card-title" >El proceso consta de:</h5> </br>
                 <p class="card-text">
                                             
-                  1.-Certificado electrónico: tarda aproximadamente de 2 meses en obtenerse   autenticado.
+                  1.-Certificado electrónico: tarda aproximadamente de 2 meses en obtenerse autenticado.
                 </br></br>
                   2.-Expedición de constancia de título electrónico: la gestión de la constancia de título electrónico tarda un tiempo 
-                  aproximado 4 meses.
+                  aproximado 2 meses.
                 </br></br>
                   3.-Apostilla de título digital: el proceso demora de 60 a 90 días hábiles, siempre y cuando el pago esté reflejado en 
                   sistema
                 </br></br>
-                  4.-Expedición de representación gráfica (documento físico simbólico): Tarda un tiempo aproximado 2 meses y va firmado por 
-                  el Rector.
+                  4.-Expedición de representación gráfica (documento físico simbólico): Tarda un tiempo aproximado 2 meses.
                 </br></br>
                   5.-Certificado de programa académico: Documento Institucional que se emite para nuestros egresados extranjeros interesado 
                   en realizar el trámite de Convalidación en su país de origen, que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y certificado de estudios Utel.
