--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -212,216 +212,10 @@
   <div class="bloque" id="bloquePreguntasFrecuentesServicioSocial">
   <h3>Glosario</h3>
 
-  <p>
-  <h4>Academia</h4>
+<div class="framedoc m-5">
+  <iframe src="docs/doc/glosario.pdf" width="100%" height="680px"></iframe>
+</div>
 
-  Acta de calificaciones: documento institucional en el que se concentran los
-  resultados de las evaluaciones finales de los grupos abiertos en cada ciclo
-  escolar, con la firma autógrafa o firma electrónica del académico responsable de la
-  asignatura o unidad de aprendizaje.
-  </br></br>
-  Área de concentración (Lic.): asignaturas que brindan formación específica
-  centrada a un campo de conocimiento para la especialización de los alumnos
-  (Administración, Finanzas o Recursos Humanos).
-  </br></br>
-  Asignatura (Programa de Estudios): cada una de las materias que conforman
-  un plan de estudios.
-  </br>
-  Aula Virtual: ambiente de aprendizaje en el que el alumno accede a los
-  contenidos de estudio para realizar sus actividades educativas y ser evaluado.
-  Calificación extraordinaria: puntuación final que se asigna al alumno en cada
-  asignatura cursada en Nivelación Académica.
-  </br></br>
-  Calificación ordinaria: puntuación final que se asigna al alumno en cada
-  asignatura cursada en un periodo.
-  </br></br>
-  Gestor de calidad: personal de apoyo y acompañamiento al profesor durante la
-  impartición de los programas asignados por ciclo.
-  </br></br>
-  Open Class: sesión síncrona impartida por el profesor donde se revisan los temas
-  de la asignatura impartida.
-  </br></br>
-  Plan de estudios: modelo sintético, esquematizado y estructurado de las
-  asignaturas u otras unidades de aprendizaje, incluye el/los propósito(s) de
-  formación general, así como una propuesta de evaluación para mantener su
-  pertinencia y vigencia.
-  </br></br>
-  Profesor: persona que guía al alumno en su proceso de enseñanza-aprendizaje,
-  imparte las open class, evalúa las actividades académicas y firma el acta de
-  calificación final.
-  </br></br>
-  Programa de estudios: descripción sintetizada de los contenidos de las
-  asignaturas o unidades de aprendizaje que especifican de manera coherente los
-  propósitos, experiencias de aprendizaje y criterios de evaluación con los cuales se
-  verificará el logro de los aprendizajes adquiridos.
-  </br></br>
-  Programación académica: Rol de asignación de docentes a cursos académicos.
-  </br></br>
-  Salida profesional (Lic.): asignaturas pertenecientes al área de concentración
-  seleccionada por el alumno.
-  </br></br>
-  Tipo de evaluación: procedimiento con el que se califica al alumno en cada
-  asignatura y que depende del nivel educativo.</br>
-  ● Licenciatura (el alumno puede elegir la de su preferencia):
-  ● Examen parcial</br>
-  ● Actividades</br>
-  ● Trabajo Final</br>
-  ● Evidencia por competencias</br>
-  ● Maestría: se evalúa con el análisis de casos, foro de discusión,
-  participación en open class y entrega del trabajo de aplicación.</br>
-  ● Doctorado: se evalúa con la aprobación de la clase magistral, participación
-  en clase, trabajo final, actividades parciales y participación en los foros.
-
-  </p>
-
-  <p>
-  <h4>Alumno</h4>
-  </br></br>
-  Alumno (MA): persona inscrita en un plan de estudios con matrícula vigente
-  (cuenta con decisión 35).
-  Alumno de nuevo ingreso: alumno registrado por primera vez en un plan de
-  estudios.
-  </br></br>
-  Alumno activo: aquel que se encuentra cursando sus asignaturas de manera
-  ordinaria.
-  </br></br>
-  Alumno futuro: aquel que ya se encuentra inscrito, cuenta con expediente digital
-  cargado en SIU y está en espera de la fecha de inicio de ciclo.
-  </br></br>
-  Baja: estatus que inactiva los servicios ofrecidos por la institución al alumno.
-  </br></br>
-  Baja por adeudo: el alumno causa baja temporal (no voluntaria), por contar con
-  adeudo financiero, sin acuerdo de pagos.
-  </br></br>
-  Baja definitiva (BD): alumno que decide suspender de manera permanente sus
-  estudios.
-  </br></br>
-  Baja por documentos apócrifos: el antecedente académico entregado por el
-  alumno no es reconocido por la institución emisora, o bien, el alumno falsifica un
-  documento de la Universidad.
-  </br></br>
-  Baja por falta de documentos: transcurridos 6 meses posteriores al inicio del
-  primer ciclo académico del alumno. Éste podrá continuar con el plan de estudios
-  sin derecho a certificación.
-  </br></br>
-  Baja por inactividad (BTI): alumno que no ingresó al Aula Virtual durante dos
-  periodos previos.
-  </br></br>
-  Baja temporal (BT): alumno que decide suspender por un tiempo definido sus
-  estudios.
-  </br></br>
-  Cancelación de venta (CV): proceso para alumnos de nuevo ingreso mediante el
-  cual se inactiva su matrícula de acuerdo a los lineamientos, se solicita dentro de
-  las primeras 2 semanas del ciclo o cuando sea solicitado por el alumno antes de
-  su inicio de clases, p. ej.: por error en su paquete de inscripción; no se localiza al
-  alumno y no ingresa al Aula; ya no está interesado en iniciar.
-  </br></br>
-  Egresado (EG): alumno que ha acreditado el 100% de los créditos del plan de
-  estudios cursado.
-  </p>
-
-  <p>
-  <h4>Alumno</h4>
-  </br></br>
-  Alumno (MA): persona inscrita en un plan de estudios con matrícula vigente
-  (cuenta con decisión 35).
-  Alumno de nuevo ingreso: alumno registrado por primera vez en un plan de
-  estudios.
-  </br></br>
-  Alumno activo: aquel que se encuentra cursando sus asignaturas de manera
-  ordinaria.
-  </br></br>
-  Alumno futuro: aquel que ya se encuentra inscrito, cuenta con expediente digital
-  cargado en SIU y está en espera de la fecha de inicio de ciclo.
-  </br></br>
-  Baja: estatus que inactiva los servicios ofrecidos por la institución al alumno.
-  </br></br>
-  Baja por adeudo: el alumno causa baja temporal (no voluntaria), por contar con
-  adeudo financiero, sin acuerdo de pagos.
-  </br></br>
-  Baja definitiva (BD): alumno que decide suspender de manera permanente sus
-  estudios.
-  </br></br>
-  Baja por documentos apócrifos: el antecedente académico entregado por el
-  alumno no es reconocido por la institución emisora, o bien, el alumno falsifica un
-  documento de la Universidad.
-  </br></br>
-  Baja por falta de documentos: transcurridos 6 meses posteriores al inicio del
-  primer ciclo académico del alumno. Éste podrá continuar con el plan de estudios
-  sin derecho a certificación.
-  </br></br>
-  Baja por inactividad (BTI): alumno que no ingresó al Aula Virtual durante dos
-  periodos previos.
-  </br></br>
-  Baja temporal (BT): alumno que decide suspender por un tiempo definido sus
-  estudios.
-  </br></br>
-  Cancelación de venta (CV): proceso para alumnos de nuevo ingreso mediante el
-  cual se inactiva su matrícula de acuerdo a los lineamientos, se solicita dentro de
-  las primeras 2 semanas del ciclo o cuando sea solicitado por el alumno antes de
-  su inicio de clases, p. ej.: por error en su paquete de inscripción; no se localiza al
-  alumno y no ingresa al Aula; ya no está interesado en iniciar.
-  </br></br>
-  Egresado (EG): alumno que ha acreditado el 100% de los créditos del plan de
-  estudios cursado.
-  </br></br>
-  Matrícula: número consecutivo asignado a un prospecto, el cual es otorgado
-  dependiendo del campus en el que es dado de alta, pudiéndose identificar de la
-  siguiente forma:
-  <table>
-  <thead>
-  <tr>
-  <th>Nombre campus </th>
-  <th>inicio matricula</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-  <td>Utel HIGHER</td>
-  <td>01</td>
-  </tr>
-  <tr>
-  <td>Utel STUDENT</td>
-  <td>02</td>
-  </tr>
-  <tr>
-  <td>UNIV TELETÓN</td>
-  <td>03</td>
-  </tr>
-  <tr>
-  <td>UNIV METROPOLITANA MONTERREY</td>
-  <td>04</td>
-  </tr>
-  <tr>
-  <td>UNIV AUTONOMA DE GUADALAJARA</td>
-  <td>05</td>
-  </tr>
-  <tr>
-  <td>UNIV LA SALLE PACHUCA </td>
-  <td>06</td>
-  </tr>
-  <tr>
-  <td>UNIV ANTROPOLÓGICA GUADALAJARA</td>
-  <td>07</td>
-  </tr>
-  <tr>
-  <td>UNIV OBERTA DE CATALUNYA</td>
-  <td>08</td>
-  </tr>
-  <tr>
-  <td>INITE</td>
-  <td>09</td>
-  </tr>
-  <tr>
-  <td>UNIVE VIRTUAL EDUCANET MEXICO</td>
-  <td>10</td>
-  </tr>        
-  </table>
-  </p>
-
-  <p>
-
-  </p>
 
   </div>
   </div>
