--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -38,10 +38,12 @@
                         <p class="card-text">     
                           
                         Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
-    
+
+                        El tiempo estimado para la elaboración del documento es de 90 a 60 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
                         -Certificado total de estudios emitido por autoridad educativa de México</br>
                         -Pago de tramite o beneficio en paquete</br>
+                        
                         </p>
 
                       </div>
@@ -122,7 +124,8 @@
                       <p class="card-text">     
                         
                         Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
-    
+
+                        El tiempo estimado para la elaboración del documento es de 90 a 60 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
                         -Título emitido por autoridad educativa de México</br>
                         -Pago de tramite o beneficio en paquete</br>
@@ -471,16 +474,10 @@
             
 
           </a>
+              <img src="img/titulacion/latam/unesco.PNG" style="max-width: 856px;" alt="">
 
-          <div class="row row-cols-2">
-            <div class="col">
-              <img src="img/titulacion/latam/unesco.PNG" alt="">
-            </div>
-            <div class="col">
-              <img src="img/titulacion/latam/unesco.PNG" alt="">
-            </div>
-          </div>
-          
+              <img src="img/titulacion/latam/unesco2.PNG" style="max-width: 856px;" alt="">
+         
         </div>
       </div>
 
@@ -506,19 +503,12 @@
           <h4><b>Proceso</b></h4></br>
           
           <a>
-              Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
-              estadounidense, disfrutando de los mismos beneficios y condiciones tales como:</br></br>
 
-              -Continuar sus estudios en una universidad norteamericana.</br>
-              -Obtener trabajo en una empresa formalmente establecida.</br>
-              -Trabajar en el área de formación profesional.</br>
-              -Mejorar ingresos económicos.</br>
-              -Realizar trámites migratorios o certificación laboral.</br></br>    
-              
+              Los tiempos son aproximados y sujetos a la autotidad edicativa.</br></br>  
               
               La gestión del trámite se lleva a cabo directamente en Utel y solo se podrá iniciar una vez que tengas
               tu Título o Grado académico avalado por la SEP apostillado en México y solicites el trámite que
-              consiste en:
+              consiste en:</br></br>  
 
               <h6>1. Llenar la Solicitud de Convalidación de Título de Utel en USA.</h6></br></br>    
               <h6>2. Pagar el costo correspondiente al trámite, que incluye:</h6></br></br>    
@@ -568,7 +558,7 @@
       <!--CPA--> 
       <div class="bloque">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Certificado académico de Programa para Proceso de Convalidación LATAM</b></h4></br>
+            <h4><b>Certificado de programa academico para Proceso de Convalidación LATAM</b></h4></br>
             
             <a>
                 Documento Institucional que se emite para nuestros egresados extranjeros interesado en realizar el trámite de Convalidación en su país de origen, 
