--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -184,7 +184,7 @@
               <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="cartapas">
                 <div class="card-body">
                   <h5 class="card-title">Constancia de estudios</h5>
-                  <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
+                  <p class="card-text"><small class="text-muted">Alumno</small></p>
                   <p class="card-text">
                   Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla debes tener tu expediente físico completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
@@ -278,7 +278,7 @@
               <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="diplomaMaster">
                 <div class="card-body">
                   <h5 class="card-title">Diploma Máster</h5>
-                  <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
+                  <p class="card-text"><small class="text-muted">Egresado</small></p>
                   <p class="card-text">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida<br/><br/>
                   
@@ -573,19 +573,19 @@
              n         <div id="carouseltitinter2" class="carousel carousel-ejemplo slide">
                         <div class="carousel-inner carousel-inner-ejemplo">
                           <div class="carousel-item active">
-                            <img src="img/escolares/Titulo2_intermedio.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio2.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio3.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio4.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio4.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/escolares/Titulo2_intermedio6.PNG" class="imagenes_ejemplo d-block w-100" alt="...">
+                            <img src="img/escolares/Titulo2_intermedio6.png" class="imagenes_ejemplo d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter2" data-bs-slide="prev">
